add: get ctp
